--- a/package.json
+++ b/package.json
@@ -11,15 +11,20 @@
   },
   "dependencies": {
     "@astrojs/check": "^0.4.1",
-    "@astrojs/netlify": "^5.0.1",
+    "@astrojs/db": "^0.8.8",
+    "@astrojs/netlify": "^5.1.3",
     "@astrojs/react": "^3.0.9",
     "@astrojs/tailwind": "^5.1.0",
     "@types/react": "^18.2.48",
     "@types/react-dom": "^18.2.18",
     "astro": "^4.2.7",
+    "astro-icon": "^1.1.0",
+    "class-variance-authority": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "sanitize-html": "^2.12.1",
+    "tailwind-merge": "^2.2.2",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
   },
