--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "typescript": "^5.3.3"
   },
   "devDependencies": {
-    "@tailwindcss/forms": "^0.5.7"
+    "@tailwindcss/forms": "^0.5.7",
+    "@types/sanitize-html": "^2.11.0"
   }
 }
